--- a/index.html
+++ b/index.html
@@ -430,6 +430,39 @@
         });
     }
 
+    function exportarGPX() {
+    if (path.getPath().getLength() === 0) {
+      alert("No hay datos de ruta para exportar.");
+      return;
+    }
+
+    let gpx = '<?xml version="1.0" encoding="UTF-8"?>\n';
+    gpx += '<gpx version="1.1" creator="RunnersPace Pro">\n';
+    gpx += '  <trk>\n';
+    gpx += '    <name>Carrera Exportada</name>\n';
+    gpx += '    <trkseg>\n';
+
+    path.getPath().forEach((point) => {
+      const lat = point.lat();
+      const lng = point.lng();
+      gpx += `      <trkpt lat="${lat}" lon="${lng}"></trkpt>\n`;
+    });
+
+    gpx += '    </trkseg>\n';
+    gpx += '  </trk>\n';
+    gpx += '</gpx>';
+
+    const blob = new Blob([gpx], { type: 'application/gpx+xml' });
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url;
+    a.download = 'ruta.gpx';
+    document.body.appendChild(a);
+    a.click();
+    document.body.removeChild(a);
+    URL.revokeObjectURL(url);
+  }
+    
     function calcularRitmoActual() {
       const tiempoTranscurrido = (new Date() - startTime - pausedDuration) / 60000; // Convertir a minutos
       return distanciaRecorrida > 0 ? tiempoTranscurrido / distanciaRecorrida : 0;
