--- a/index.html
+++ b/index.html
@@ -105,16 +105,14 @@
             max-width: 90%;
         }
       #creator-info {
-           position: fixed;
-           top: 10px;
-           left: 50%;
-           transform: translateX(-0%);
-           background-color: rgba(17, 32, 117, 0.8);
-           color: white;
-           padding: 5px 10px;
-           border-radius: 4px;
-           font-size: 0.8em;
-           z-index: 1000;
+    position: static;
+    background-color: #112075;
+    color: white;
+    padding: 5px 0;
+    text-align: center;
+    font-size: 0.8em;
+    width: 100%;
+    box-sizing: border-box;
     }
     </style>
 </head>
