--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RunnersPace Pro</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -23,9 +25,9 @@
         }
         .card {
             background-color: #fff;
-            border-radius: 8px;
+            border-radius: 20px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            padding: 20px;
+            padding: 10px;
             margin-bottom: 20px;
         }
         input, button {
@@ -96,18 +98,30 @@
         }
         footer {
             text-align: center;
-            margin-top: 5px;
-            padding: 5px;
+            margin: 10px auto 0;
+            padding: 0,5px;
             background-color: #112075;
             color: white;
-            border-radius: 8px;
+            border-radius: 20px;
+            font-size: 1em;
+            max-width: 90%;
+        }
+        #creator-info {
+            position: static;
+            background-color: #112075;
+            color: white;
+            padding: 5px 0;
+            text-align: center;
+            font-size: 0.8em;
+            width: 100%;
+            box-sizing: border-box;
         }
     </style>
 </head>
 <body>
+    <div id="creator-info">Desarrollada por Diego Valdés</div>
     <div class="container">
         <h1>Alcanza tu ritmo</h1>
-        <h2>Versión de prueba</h2>
         <div class="card">
             <input type="text" id="nombreCarrera" placeholder="Nombre de la carrera">
             <h3>Distancia objetivo km</h3>
@@ -146,7 +160,7 @@
         <div id="carrerasGuardadas" class="card"></div>
         <div id="map"></div>
         <footer>
-            <p>Aplicación creada por Diego Valdés</p>
+            <p>Versión de Prueba</p>
         </footer>
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNoJAfM3yuVwAcmXoJ2z8whnG2-2TJPpM&callback=initMap" async defer></script>
