--- a/index.html
+++ b/index.html
@@ -492,26 +492,27 @@
         }
 
         function exportarGPX() {
-              const pathArray = path.getPath().getArray();
-              if (pathArray.length === 0) {
-            alert("No hay datos de ruta para exportar.");
-            return;
-          }
-              let gpx = '<?xml version="1.0" encoding="UTF-8"?>';
-                  gpx += '<gpx version="1.1" creator="Running App">';
-                    gpx += '<trk><trkseg>';
-                  pathArray.forEach(latlng => {
-                    gpx += `<trkpt lat="${latlng.lat()}" lon="${latlng.lng()}"></trkpt>`;
-                  });
-                  gpx += '</trkseg></trk></gpx>';
-            const blob = new Blob([gpxData], { type: 'application/gpx+xml' });
-            const url = URL.createObjectURL(blob);
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = `${document.getElementById('nombreCarrera').value}.gpx`;
-            a.click();
-            URL.revokeObjectURL(url);
-        }
+      const pathArray = path.getPath().getArray();
+      if (pathArray.length === 0) {
+        alert("No hay datos de ruta para exportar.");
+        return;
+      }
+      let gpx = '<?xml version="1.0" encoding="UTF-8"?>';
+      gpx += '<gpx version="1.1" creator="Running App">';
+      gpx += '<trk><trkseg>';
+      pathArray.forEach(latlng => {
+        gpx += `<trkpt lat="${latlng.lat()}" lon="${latlng.lng()}"></trkpt>`;
+      });
+      gpx += '</trkseg></trk></gpx>';
+
+      const blob = new Blob([gpx], { type: 'application/gpx+xml' });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = 'ruta.gpx';
+      a.click();
+      URL.revokeObjectURL(url);
+    }
 
         function tomarFoto() {
       navigator.mediaDevices.getUserMedia({ video: true })
